crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__detect_same_package.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
bar.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | import pandas
3 | | import foo.baz
  |
  = help: Organize imports

ℹ Fix
1 1 | import os
  2 |+
2 3 | import pandas
  4 |+
3 5 | import foo.baz


