crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__force_to_top_force_to_top.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    suggestion: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 24
    column: 0
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 24
          column: 0
        content: "import lib1\nimport lib3\nimport lib3.lib4\nimport lib5\nimport z\nimport foo\nimport lib2\nimport lib3.lib4.lib5\nimport lib4\nimport lib6\nfrom lib1 import foo\nfrom lib3.lib4 import foo\nfrom lib5 import lib1, lib2\nfrom foo import bar\nfrom foo.lib1.bar import baz\nfrom lib1.lib2 import foo\nfrom lib2 import foo\nfrom lib3.lib4.lib5 import foo\nfrom lib4 import lib1, lib2\n"
  parent: ~

