crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__force_wrap_aliases_force_wrap_aliases.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/force_wrap_aliases.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / from .a import a1 as a1, a2 as a2
2 | | from .b import b1 as b1
3 | | from .c import c1
  |
  = help: Organize imports

ℹ Suggested fix
1   |-from .a import a1 as a1, a2 as a2
  1 |+from .a import (
  2 |+    a1 as a1,
  3 |+    a2 as a2,
  4 |+)
2 5 | from .b import b1 as b1
3 6 | from .c import c1


