crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__glob_1_separate_subpackage_first_and_third_party_imports.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
separate_subpackage_first_and_third_party_imports.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import baz
3 | | from foo import bar, baz
4 | | from foo.bar import blah, blub
5 | | from foo.bar.baz import something
6 | | import foo
7 | | import foo.bar
8 | | import foo.bar.baz
  |
  = help: Organize imports

ℹ Fix
1  1  | import sys
   2  |+
   3  |+import foo
   4  |+from foo import bar, baz
   5  |+
2  6  | import baz
3     |-from foo import bar, baz
   7  |+import foo.bar
   8  |+import foo.bar.baz
4  9  | from foo.bar import blah, blub
5  10 | from foo.bar.baz import something
6     |-import foo
7     |-import foo.bar
8     |-import foo.bar.baz


